--- a/bounce123/requirements.txt
+++ b/bounce123/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.7.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 Django==4.2.5
+django-cors-headers==4.2.0
 djangorestframework==3.14.0
 idna==3.4
 numpy==1.25.2
